# DATT

./: .gitignore  pyproject.toml
.opencode/: datt-pyproject.md
DATT/: cli.py  main.py  presets.py  schema.py
DATT/controllers/: cntrl_config.py  datt_controller.py  mppi_controller.py  pid_controller.py
DATT/learning/: base_env.py  configs.py  eval_policy.py  eval_rma_policy.py  train_policy.py  train_rma.py
DATT/learning/tasks/: trajectory.py  trajectory_fbff.py
DATT/quadsim/: main.py
DATT/refs/: __init__.py
checkpoints/: datt.policy.json  datt_hover.policy.json  datt_wind_adaptive.policy.json
config/: DATT_config.py  cf.py  configuration.py  datt.py  datt_hover.py  datt_wind_adaptive.py
logs/hover_ppo_1778059965_logs/PPO_1/: events.out.tfevents.1778059966.rec.258390.0
logs/test_bar_logs/PPO_1/: events.out.tfevents.1778060455.rec.261747.0
logs/test_tqdm_logs/PPO_1/: events.out.tfevents.1778060396.rec.261517.0
logs/test_verbose_logs/PPO_1/: events.out.tfevents.1778060304.rec.260982.0
logs/trajectory_fbff_ppo_1778060208_logs/PPO_1/: events.out.tfevents.1778060208.rec.260071.0
logs/trajectory_fbff_ppo_1778060488_logs/PPO_1/: events.out.tfevents.1778060489.rec.261905.0
